Add references to the notebook and the tools

--- a/I_Visualize_Us_Together.ipynb
+++ b/I_Visualize_Us_Together.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -261,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "xx = [-.7,.7]; yy = [.19,.21];\n",
-    "p = bokeh.plotting.figure( tools=['pan','xwheel_zoom','reset'], title = 'Please Scroll to help bring us closer together', width=800, height=600)\n",
+    "p = bokeh.plotting.figure( tools=['pan','xwheel_zoom','reset'], title = 'Please Scroll to help bring us closer together', width=900, height=650)\n",
     "p.xaxis.visible, p.yaxis.visible = [False, False]\n",
     "p.x_range.start, p.x_range.end = [-1.2, 1.2]\n",
     "p.y_range.start, p.y_range.end = [-1.8, 1]\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -310,12 +310,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "reference = IPython.display.HTML('reference.html')\n",
     "with open( 'index.html','w') as f:    \n",
     "    f.write(jinja2.Template(\"\"\"<!doctype html><html>\n",
     "    <head>\n",
@@ -323,8 +333,47 @@
     "        <style>{{bokeh.resources.INLINE.css_raw[0]}}</style>\n",
     "        <link rel=\"stylesheet\" type=\"text/css\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css\" />\n",
     "    </head><body>\n",
-    "    <div class=\"container\"><h1>I Visualize US Together</h1>{{''.join(bokeh.embed.components(p))}}</div></body></html>\n",
+    "    <div class=\"container\">\n",
+    "        <h1>I Visualize US Together</h1>\n",
+    "        <div style=\"margin: 0 auto;left: 50%;\">\n",
+    "        {{''.join(bokeh.embed.components(p))}}\n",
+    "        </div>\n",
+    "        {{reference.data}}\n",
+    "    </div></body></html>\n",
     "    \"\"\").render(**globals()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting reference.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file reference.html\n",
+    "<hr>\n",
+    "<div class=\"row\">\n",
+    "    <p class=\"lead text-center\">This valentine was made with \n",
+    "    <img style=\"height:60px;align:middle;display:inline;\" src=\"assets/anaconda-logo.png\" ></img>\n",
+    "    <span style=\"color:rgba(0,1,0);\">Anaconda</span> and <span style=\"top:-10px;\"><img style=\"height:70px;display:inline;\" src=\"assets/jupyter.png\"/></span> notebooks.\n",
+    "    </p>\n",
+    "</div>\n",
+    "<div class=\"row\">\n",
+    "    <p class=\"lead text-center\"><a href=\"https://www.continuum.io/sites/default/files/Anaconda_LuvBytes_VDayCards.pdf\">Share some <span style=\"color:green;\">L&#x2764;VE</span> with your friends.</a></p>\n",
+    "</div>\n",
+    "<hr>\n",
+    "<div class=\"row\">\n",
+    "    <p class=\"text-center\"<code><a href=\"https://github.com/ContinuumIO/LuvBytes/blob/gh-pages/I_Visualize_Us_Together.ipynb\">View the source.</a></code></p>\n",
+    "</div>"
    ]
   },
   {
